<resources>
    <string name="app_name">FloatingButtons</string>
    <string name="action_settings">Settings</string>
    <string name="addItemHint">New Todo Task</string>
    <string name="addItemContentDescription">New To Do Item</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="world">world</string>
    <string name="fragment">Fragment</string>
    <string name="delete">Delete</string>
    <string name="priority">Priority:</string>
    <string name="content">content</string>
    <string name="duedate">DueDate</string>
    <string name="update">Update</string>
    <string name="setdate">SetDate</string>
    <string name="setcalendar">SetCalendar</string>
    <string name="addnewtask">Add New Task</string>
    <string name="setcalendarview">SetCalendarView</string>
    <string name="app_name_calendar">CalendarName</string>
    <string name="deleteTask">Delete Task</string>

    <string name="about_summary">Android Calendar View Demo V0.5.0</string>
    <string name="about">About</string>
    <string name="pick_summary">start with ACTION_PICK</string>
    <string name="pick">Pick up a Date</string>
    <string name="show_summary">start with ACTION_VIEW</string>
    <string name="show">Show Calendar</string>
    <string name="app_name_other">Calendar</string>
    <string name="subTask">SubTasks</string>

    <string name="hint">Hint: touch the first or last day of month to move to previous or next month.</string>

</resources>
