<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/details_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editableTodoText"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/border_lines"
        android:maxLines="2"
        android:hint="@string/addItemHint"

        />
    <!--
    <TextView
        android:id="@+id/notEditableTodoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addItemHint"
        />
        -->

    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@android:color/white"
        android:text="@string/duedate"/>
    <Button
        android:id="@+id/button_id2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/setdate"
        />

    <TextView
        android:id="@+id/priority_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/border_lines"
        android:text="@string/priority"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/border_lines"
        android:drawSelectorOnTop="true"
        />

    <EditText
        android:id="@+id/content_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/details_contentColor"
        android:maxHeight="200dp"
        android:layout_marginBottom="15dp"
        android:text="@string/content"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_green_light"
            android:text="@android:string/ok"
            />
        <Button android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_red_light"
            android:text="@android:string/cancel"
            />
    </LinearLayout>



</LinearLayout>